Ticket #28745: Added drag source component's model to drag operation.

--- a/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
@@ -1100,6 +1100,8 @@ com.top_logic.model.search.providers.TableCommandProviderByExpression.tooltip = 
 com.top_logic.model.search.providers.TableDragSourceByExpression = Tabellen Drag-Quelle in TL-Script
 com.top_logic.model.search.providers.TableDragSourceByExpression.Config.canDrag = Prädikat einer Drag Möglichkeit
 com.top_logic.model.search.providers.TableDragSourceByExpression.Config.canDrag.tooltip = Funktion, die prüft, ob eine  Tabellenzeile gezogen werden kann. <p> Die Funktion erhält eine Tabellenzeile. </p>
+com.top_logic.model.search.providers.TableDragSourceByExpression.Config.drag-source-model = Drag-Quellenmodell
+com.top_logic.model.search.providers.TableDragSourceByExpression.Config.drag-source-model.tooltip = Funktion, die das Modell der Drag-Quelle erstellt. <p> Dieses Modell kann zusammen mit den gezogenen Objekten am Ablageort abgerufen werden. </p> <p> Die Funktion erhält das Modell der Komponente als einziges Argument. </p> <pre> <code>model -> ...</code> </pre> <p> Wenn nicht angegeben, wird das Modell der Komponente als Drag-Quellmodell verwendet. </p>
 com.top_logic.model.search.providers.TableDragSourceByExpression.Config.dragEnabled = Tabellen Drag Funktionalität
 com.top_logic.model.search.providers.TableDragSourceByExpression.Config.dragEnabled.tooltip = Ob das Ziehen aus der angegebenen Tabelle aktiviert ist.
 com.top_logic.model.search.providers.TableDragSourceByExpression.tooltip = <i>Tabellen-Drag-Quelle</i>, die vollständig über Modellabfragen konfiguriert werden kann.
@@ -1132,6 +1134,8 @@ com.top_logic.model.search.providers.TransformLinkingByExpression.tooltip = <i>K
 com.top_logic.model.search.providers.TreeDragSourceByExpression = Baum Drag-Quelle in TL-Script
 com.top_logic.model.search.providers.TreeDragSourceByExpression.Config.canDrag = Prädikat einer Drag Möglichkeit
 com.top_logic.model.search.providers.TreeDragSourceByExpression.Config.canDrag.tooltip = Funktion, die prüft, ob ein Baumknoten gezogen werden kann. <p> Die Funktion erhält einen Baumknoten. </p>
+com.top_logic.model.search.providers.TreeDragSourceByExpression.Config.drag-source-model = Drag-Quellmodell
+com.top_logic.model.search.providers.TreeDragSourceByExpression.Config.drag-source-model.tooltip = Funktion, die das Modell der Drag-Quelle erstellt. <p> Dieses Modell kann zusammen mit den gezogenen Objekten am Ablageort abgerufen werden. </p> <p> Die Funktion erhält das Modell der Komponente als einziges Argument. </p> <pre> <code>model -> ...</code> </pre> <p> Wenn nicht angegeben, wird das Modell der Komponente als Drag-Quellmodell verwendet. </p>
 com.top_logic.model.search.providers.TreeDragSourceByExpression.Config.dragEnabled = Baum Drag Funktionalität
 com.top_logic.model.search.providers.TreeDragSourceByExpression.Config.dragEnabled.tooltip = Ob das Ziehen aus dem angegebenen Baum aktiviert ist.
 com.top_logic.model.search.providers.TreeDragSourceByExpression.tooltip = <i>Baumzugquelle</i>, die vollständig über Modellabfragen konfiguriert werden kann.
