--- a/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
@@ -1100,6 +1100,8 @@ com.top_logic.model.search.providers.TableCommandProviderByExpression.tooltip = 
 com.top_logic.model.search.providers.TableDragSourceByExpression = Table drag source by expression
 com.top_logic.model.search.providers.TableDragSourceByExpression.Config.canDrag = Can drag
 com.top_logic.model.search.providers.TableDragSourceByExpression.Config.canDrag.tooltip = Function checking if a given table row can be dragged. <p> The function receives a table row. </p>
+com.top_logic.model.search.providers.TableDragSourceByExpression.Config.drag-source-model = Drag source model
+com.top_logic.model.search.providers.TableDragSourceByExpression.Config.drag-source-model.tooltip = Function creating the drag source model. <p> The drag source model can be retrieved at the drop location together with the dragged objects. </p> <p> The function receives the component's model as single argument. </p> <pre> <code>model -> ...</code> </pre> <p> If not given, the component's model is used as drag source model. </p>
 com.top_logic.model.search.providers.TableDragSourceByExpression.Config.dragEnabled = Drag enabled
 com.top_logic.model.search.providers.TableDragSourceByExpression.Config.dragEnabled.tooltip = Whether dragging from the given table is enabled.
 com.top_logic.model.search.providers.TableDragSourceByExpression.tooltip = <i>Table drag source</i> that can be completely configured using model queries.
@@ -1132,6 +1134,8 @@ com.top_logic.model.search.providers.TransformLinkingByExpression.tooltip = <i>C
 com.top_logic.model.search.providers.TreeDragSourceByExpression = Tree drag source by expression
 com.top_logic.model.search.providers.TreeDragSourceByExpression.Config.canDrag = Can drag
 com.top_logic.model.search.providers.TreeDragSourceByExpression.Config.canDrag.tooltip = Function checking if a given tree node can be dragged. <p> The function receives a tree node. </p>
+com.top_logic.model.search.providers.TreeDragSourceByExpression.Config.drag-source-model = Drag source model
+com.top_logic.model.search.providers.TreeDragSourceByExpression.Config.drag-source-model.tooltip = Function creating the drag source model. <p> The drag source model can be retrieved at the drop location together with the dragged objects. </p> <p> The function receives the component's model as single argument. </p> <pre> <code>model -> ...</code> </pre> <p> If not given, the component's model is used as drag source model. </p>
 com.top_logic.model.search.providers.TreeDragSourceByExpression.Config.dragEnabled = Drag enabled
 com.top_logic.model.search.providers.TreeDragSourceByExpression.Config.dragEnabled.tooltip = Whether dragging from the given tree is enabled.
 com.top_logic.model.search.providers.TreeDragSourceByExpression.tooltip = <i>Tree drag source</i> that can be completely configured using model queries.
