Ticket #28746: Added matcher for matching object by label.

--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -4662,6 +4662,10 @@ com.top_logic.layout.scripting.recorder.ref.ui.form.BusinessObjectFieldMatcher =
 com.top_logic.layout.scripting.recorder.ref.ui.form.BusinessObjectFieldMatcher.Config.business-object = Business-Objekt
 com.top_logic.layout.scripting.recorder.ref.ui.form.BusinessObjectFieldMatcher.Config.business-object.tooltip = Beschreibung des Geschäftsobjekts, das mit einem passenden <i>Formular-Member</i> verknüpft ist.
 com.top_logic.layout.scripting.recorder.ref.ui.form.BusinessObjectFieldMatcher.tooltip = <i>Field Matcher</i>, der <i>Formularelemente</i> auf der Grundlage ihres annotierten Geschäftsobjekts identifiziert.
+com.top_logic.layout.scripting.recorder.ref.ui.form.BusinessObjectLabelFieldMatcher = Business Objekt Bezeichnung Feld Matcher
+com.top_logic.layout.scripting.recorder.ref.ui.form.BusinessObjectLabelFieldMatcher.Config.label = Bezeichnung
+com.top_logic.layout.scripting.recorder.ref.ui.form.BusinessObjectLabelFieldMatcher.Config.label.tooltip = Bezeichnung des Geschäftsobjekts, das mit einem passenden <i>Formularelement</i> verknüpft ist.
+com.top_logic.layout.scripting.recorder.ref.ui.form.BusinessObjectLabelFieldMatcher.tooltip = <i>Feldabgleicher</i>, der <i>Formularmitglieder</i> anhand der Bezeichnung ihres annotierten Geschäftsobjekts identifiziert.
 com.top_logic.layout.scripting.recorder.ref.ui.form.DefaultFormMemberNaming$Name = Name
 com.top_logic.layout.scripting.recorder.ref.ui.form.DefaultFormMemberNaming$Name.tooltip = Beschreibung eines <i>Formular-Elements</i>, die durch die <i>standardmäßige Benennung von Formular-Elementen</i> interpretiert wird.
 com.top_logic.layout.scripting.recorder.ref.ui.form.DefaultFormMemberNaming.Name.form = Formular
