Ticket #28745: Allow to transfer paths instead of node objects.
Added configuration option to tree table drag source.

--- a/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
@@ -1181,6 +1181,8 @@ com.top_logic.model.search.providers.TreeOptionsByExpression.Config.showRoot = W
 com.top_logic.model.search.providers.TreeOptionsByExpression.Config.showRoot.tooltip = Ob der Wurzelknoten angezeigt werden soll.
 com.top_logic.model.search.providers.TreeOptionsByExpression.tooltip = <i>Generator</i>, der mit Hilfe von Suchausdrücken dynamisch konfiguriert werden kann, um baumartige Optionen bereitzustellen.
 com.top_logic.model.search.providers.TreeTableDragSourceByExpression = Baumtabellen Drag-Quelle in TL-Script
+com.top_logic.model.search.providers.TreeTableDragSourceByExpression.Config.transfer-paths = Pfade übertragen
+com.top_logic.model.search.providers.TreeTableDragSourceByExpression.Config.transfer-paths.tooltip = Ob die Pfade zu den Objekten an die Drop-Ziele übertragen werden und nicht nur die Benutzerobjekte der Baumknoten. <p> In einem Baum, in dem dasselbe Objekt mehrfach in verschiedenen Knoten vorkommen kann, ermöglicht diese Option die genaue Angabe der gezogenen Knoten. </p> <p> Wenn diese Option aktiviert ist, bestehen die Ziehdaten aus Auflistungen von Geschäftsobjekten. Dabei stellt jede Liste von Geschäftsobjekten einen Pfad im Baum zu einem ausgewählten Objekt dar. In jedem Pfad ist das erste Element der Wurzelknoten des Baums und das letzte Element ist das gezogene Objekt selbst. </p>
 com.top_logic.model.search.providers.TreeTableDragSourceByExpression.tooltip = <i>Tabellen Drag-Quelle</i> für Baumtabellen in TL-Script.
 com.top_logic.model.search.providers.TreeTableDropTargetByExpression = Baumtabellen Drop-Ziel in TL-Script
 com.top_logic.model.search.providers.TreeTableDropTargetByExpression.tooltip = <i>Tabellenablageziel</i> für Baumtabellen, die vollständig über Modellabfragen konfiguriert werden können.
