--- a/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
@@ -1181,6 +1181,8 @@ com.top_logic.model.search.providers.TreeOptionsByExpression.Config.showRoot = S
 com.top_logic.model.search.providers.TreeOptionsByExpression.Config.showRoot.tooltip = Whether to show the root node.
 com.top_logic.model.search.providers.TreeOptionsByExpression.tooltip = <i>Generator</i> that can be configured dynamically using search expressions for providing tree like options.
 com.top_logic.model.search.providers.TreeTableDragSourceByExpression = Tree table drag source by expression
+com.top_logic.model.search.providers.TreeTableDragSourceByExpression.Config.transfer-paths = Transfer paths
+com.top_logic.model.search.providers.TreeTableDragSourceByExpression.Config.transfer-paths.tooltip = Whether paths to objects are transfered to drag targets instead of simply tree node user objects. <p> In a tree where the same object may occur multiple times in different nodes, this option allows to exactly specify the dragged nodes. </p> <p> When enabled, the drag data consists of collections of lists of business objects. Where each list of business objects represents a path in the tree to a selected object. In each path, the first element is the tree's root node and the last element is the dragged object itself. </p>
 com.top_logic.model.search.providers.TreeTableDragSourceByExpression.tooltip = <i>Table drag source by expression</i> for tree tables.
 com.top_logic.model.search.providers.TreeTableDropTargetByExpression = Tree table drop target by expression
 com.top_logic.model.search.providers.TreeTableDropTargetByExpression.tooltip = <i>Table drop target</i> for tree tables that can be completely configured using model queries.
