Ticket #25918: Added element with explicitly given width and height.

--- a/com.top_logic.graphic.blocks/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.graphic.blocks/src/main/java/META-INF/messages_de.properties
@@ -99,7 +99,7 @@ com.top_logic.graphic.flow.data.SpaceDistribution.STRETCH_CONTENT = Inhalt strec
 com.top_logic.graphic.flow.data.SpaceDistribution.STRETCH_CONTENT.tooltip = Dehnen Sie die Inhaltsfelder, aber halten Sie den Abstand konstant.
 com.top_logic.graphic.flow.data.SpaceDistribution.STRETCH_GAP = Lücke dehnen
 com.top_logic.graphic.flow.data.SpaceDistribution.STRETCH_GAP.tooltip = Dehnen Sie den Abstand zwischen den Feldern.
-com.top_logic.graphic.flow.data.SpaceDistribution.tooltip = Anweisung zur Verwendung von Exta-Leerzeichen in einem Zeilenlayout.
+com.top_logic.graphic.flow.data.SpaceDistribution.tooltip = Anleitung zur Verwendung von zusätzlichem Platz in einem Zeilenlayout.
 com.top_logic.graphic.flow.data.Widget$TypeKind = Typ Art
 com.top_logic.graphic.flow.data.Widget$TypeKind.tooltip = Typcodes für die <i>Widget-Hierarchie</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.ALIGN = Ausrichten
@@ -112,6 +112,8 @@ com.top_logic.graphic.flow.data.Widget.TypeKind.COMPASS_LAYOUT = Kompass-Layout
 com.top_logic.graphic.flow.data.Widget.TypeKind.COMPASS_LAYOUT.tooltip = Geben Sie ein Literal für das <i>Kompass-Layout</i> ein.
 com.top_logic.graphic.flow.data.Widget.TypeKind.DIAGRAM = Diagramm
 com.top_logic.graphic.flow.data.Widget.TypeKind.DIAGRAM.tooltip = Type literal für <i>Diagramm</i>.
+com.top_logic.graphic.flow.data.Widget.TypeKind.DROP_REGION = Region fallen lassen
+com.top_logic.graphic.flow.data.Widget.TypeKind.DROP_REGION.tooltip = Typ Literal für <i>Drop Region</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.EMPTY = Leere
 com.top_logic.graphic.flow.data.Widget.TypeKind.EMPTY.tooltip = Typ literal für <i>leer</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.FILL = Füllen Sie
@@ -128,6 +130,8 @@ com.top_logic.graphic.flow.data.Widget.TypeKind.PADDING = Polsterung
 com.top_logic.graphic.flow.data.Widget.TypeKind.PADDING.tooltip = Typ Literal für <i>Auffüllung</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.SELECTABLE_BOX = Wählbares Feld
 com.top_logic.graphic.flow.data.Widget.TypeKind.SELECTABLE_BOX.tooltip = Schriftzeichen für <i>auswählbares Feld</i>.
+com.top_logic.graphic.flow.data.Widget.TypeKind.SIZED = Größe
+com.top_logic.graphic.flow.data.Widget.TypeKind.SIZED.tooltip = Typ wörtlich für <i>Größe</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.STACK = Stapel
 com.top_logic.graphic.flow.data.Widget.TypeKind.STACK.tooltip = Typ Literal für <i>Stack</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.TEXT = Text
