--- a/com.top_logic.graphic.blocks/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.graphic.blocks/src/main/java/META-INF/messages_en.properties
@@ -99,7 +99,7 @@ com.top_logic.graphic.flow.data.SpaceDistribution.STRETCH_CONTENT = Stretch cont
 com.top_logic.graphic.flow.data.SpaceDistribution.STRETCH_CONTENT.tooltip = Stretch the content boxes but keep the gap constant.
 com.top_logic.graphic.flow.data.SpaceDistribution.STRETCH_GAP = Stretch gap
 com.top_logic.graphic.flow.data.SpaceDistribution.STRETCH_GAP.tooltip = Stretch the gap between boxes.
-com.top_logic.graphic.flow.data.SpaceDistribution.tooltip = Instruction how to use exta space in a row layout.
+com.top_logic.graphic.flow.data.SpaceDistribution.tooltip = Instruction how to use extra space in a row layout.
 com.top_logic.graphic.flow.data.Widget$TypeKind = Type kind
 com.top_logic.graphic.flow.data.Widget$TypeKind.tooltip = Type codes for the <i>widget</i> hierarchy.
 com.top_logic.graphic.flow.data.Widget.TypeKind.ALIGN = Align
@@ -126,8 +126,12 @@ com.top_logic.graphic.flow.data.Widget.TypeKind.IMAGE = Image
 com.top_logic.graphic.flow.data.Widget.TypeKind.IMAGE.tooltip = Type literal for <i>image</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.PADDING = Padding
 com.top_logic.graphic.flow.data.Widget.TypeKind.PADDING.tooltip = Type literal for <i>padding</i>.
+com.top_logic.graphic.flow.data.Widget.TypeKind.POLYGONAL_CHAIN = Polygonal chain
+com.top_logic.graphic.flow.data.Widget.TypeKind.POLYGONAL_CHAIN.tooltip = Type literal for <i>polygonal chain</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.SELECTABLE_BOX = Selectable box
 com.top_logic.graphic.flow.data.Widget.TypeKind.SELECTABLE_BOX.tooltip = Type literal for <i>selectable box</i>.
+com.top_logic.graphic.flow.data.Widget.TypeKind.SIZED = Sized
+com.top_logic.graphic.flow.data.Widget.TypeKind.SIZED.tooltip = Type literal for <i>sized</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.STACK = Stack
 com.top_logic.graphic.flow.data.Widget.TypeKind.STACK.tooltip = Type literal for <i>stack</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.TEXT = Text
