Ticket #25918: Added polygonal chain to SVG diagram.

--- a/com.top_logic.graphic.blocks/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.graphic.blocks/src/main/java/META-INF/messages_de.properties
@@ -128,6 +128,8 @@ com.top_logic.graphic.flow.data.Widget.TypeKind.IMAGE = Bild
 com.top_logic.graphic.flow.data.Widget.TypeKind.IMAGE.tooltip = Schriftzeichen für <i>Bild</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.PADDING = Polsterung
 com.top_logic.graphic.flow.data.Widget.TypeKind.PADDING.tooltip = Typ Literal für <i>Auffüllung</i>.
+com.top_logic.graphic.flow.data.Widget.TypeKind.POLYGONAL_CHAIN = Polygonale Kette
+com.top_logic.graphic.flow.data.Widget.TypeKind.POLYGONAL_CHAIN.tooltip = Typ-Literal für <i>polygonale Kette</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.SELECTABLE_BOX = Wählbares Feld
 com.top_logic.graphic.flow.data.Widget.TypeKind.SELECTABLE_BOX.tooltip = Schriftzeichen für <i>auswählbares Feld</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.SIZED = Größe
