--- a/com.top_logic.graphic.blocks/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.graphic.blocks/src/main/java/META-INF/messages_en.properties
@@ -112,6 +112,8 @@ com.top_logic.graphic.flow.data.Widget.TypeKind.COMPASS_LAYOUT = Compass layout
 com.top_logic.graphic.flow.data.Widget.TypeKind.COMPASS_LAYOUT.tooltip = Type literal for <i>compass layout</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.DIAGRAM = Diagram
 com.top_logic.graphic.flow.data.Widget.TypeKind.DIAGRAM.tooltip = Type literal for <i>diagram</i>.
+com.top_logic.graphic.flow.data.Widget.TypeKind.DROP_REGION = Drop region
+com.top_logic.graphic.flow.data.Widget.TypeKind.DROP_REGION.tooltip = Type literal for <i>drop region</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.EMPTY = Empty
 com.top_logic.graphic.flow.data.Widget.TypeKind.EMPTY.tooltip = Type literal for <i>empty</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.FILL = Fill
