Ticket #25918: Added box to clip contents if they become to large.

--- a/com.top_logic.graphic.blocks/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.graphic.blocks/src/main/java/META-INF/messages_de.properties
@@ -108,6 +108,8 @@ com.top_logic.graphic.flow.data.Widget.TypeKind.BORDER = Grenze
 com.top_logic.graphic.flow.data.Widget.TypeKind.BORDER.tooltip = Schriftzeichen für <i>Rahmen</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.CLICK_TARGET = Ziel anklicken
 com.top_logic.graphic.flow.data.Widget.TypeKind.CLICK_TARGET.tooltip = Geben Sie ein Literal für das <i>Klickziel</i> ein.
+com.top_logic.graphic.flow.data.Widget.TypeKind.CLIP_BOX = Clip-Box
+com.top_logic.graphic.flow.data.Widget.TypeKind.CLIP_BOX.tooltip = Wörtliche Bezeichnung für die <i>Clip-Box</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.COMPASS_LAYOUT = Kompass-Layout
 com.top_logic.graphic.flow.data.Widget.TypeKind.COMPASS_LAYOUT.tooltip = Geben Sie ein Literal für das <i>Kompass-Layout</i> ein.
 com.top_logic.graphic.flow.data.Widget.TypeKind.DIAGRAM = Diagramm
