--- a/com.top_logic.graphic.blocks/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.graphic.blocks/src/main/java/META-INF/messages_en.properties
@@ -108,6 +108,8 @@ com.top_logic.graphic.flow.data.Widget.TypeKind.BORDER = Border
 com.top_logic.graphic.flow.data.Widget.TypeKind.BORDER.tooltip = Type literal for <i>border</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.CLICK_TARGET = Click target
 com.top_logic.graphic.flow.data.Widget.TypeKind.CLICK_TARGET.tooltip = Type literal for <i>click target</i>.
+com.top_logic.graphic.flow.data.Widget.TypeKind.CLIP_BOX = Clip box
+com.top_logic.graphic.flow.data.Widget.TypeKind.CLIP_BOX.tooltip = Type literal for <i>clip box</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.COMPASS_LAYOUT = Compass layout
 com.top_logic.graphic.flow.data.Widget.TypeKind.COMPASS_LAYOUT.tooltip = Type literal for <i>compass layout</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.DIAGRAM = Diagram
