Ticket #28753: Allow to edit composition entries in detail dialogs.
To add a detail dialog to a composition table, the composition reference
must be annotated with TLDetailDialog.

--- a/com.top_logic.element/src/main/webapp/WEB-INF/conf/resources/ElementMessages_en.properties
+++ b/com.top_logic.element/src/main/webapp/WEB-INF/conf/resources/ElementMessages_en.properties
@@ -386,6 +386,7 @@ com.top_logic.element.meta.expr.internal.StructureContext = Context object
 com.top_logic.element.meta.expr.internal.TypeOf = Type cast
 com.top_logic.element.meta.expr.internal.TypeOf.Config.module = Module
 com.top_logic.element.meta.expr.internal.TypeOf.Config.type-name = Type
+com.top_logic.element.meta.form.fieldprovider.TLDetailDialog.defaultI18n = Dialog-Titel
 com.top_logic.element.meta.form.overlay.TLFormObjectNaming$Name = {edited-object ? {Edited object '{edited-object}'} : {Created object '{domain}'}}
 com.top_logic.element.meta.kbbased.NamedConstraint = Preconfigured constraints
 com.top_logic.element.meta.kbbased.NamedConstraint$Config = Preconfigured constraints{name ? { "{name}"}}
