Ticket #28753: Allow to edit composition entries in detail dialogs.
To add a detail dialog to a composition table, the composition reference
must be annotated with TLDetailDialog.

--- a/com.top_logic.element/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_en.properties
@@ -26,6 +26,8 @@ class.com.top_logic.element.layout.meta.search.quick.I18NConstants.MORE_RESULTS 
 class.com.top_logic.element.layout.meta.search.quick.I18NConstants.NO_RESULTS = No results available, generalise search...
 class.com.top_logic.element.layout.meta.search.quick.I18NConstants.SEARCH_STRING_TOO_SHORT__MIN = Search entry requires at least {0} characters.
 class.com.top_logic.element.layout.structured.I18NConstants.ERROR_NOT_A_STRUCTURED_ELEMENT__ELEMENT = The object {0} is not a structured element.
+class.com.top_logic.element.meta.form.fieldprovider.I18NConstants.DETAIL_OPENER = Detail opener
+class.com.top_logic.element.meta.form.fieldprovider.I18NConstants.EDIT_DETAILS_TITLE__TYPE = Edit details of {0}
 class.com.top_logic.element.meta.form.fieldprovider.I18NConstants.MISSING_TYPE_COMPUTATION__ATTRIBUTE = No model type annotation found at attribute "{0}".
 class.com.top_logic.element.meta.kbbased.I18NConstants.ERROR_SETTING_VALUE__ATTRIBUTE_VALUE = Problem setting attribute value ''{0}'' to ''{1}''.
 class.com.top_logic.element.meta.kbbased.I18NConstants.NO_SUCH_GENERATOR__NAME = There is no generator with name ''{0}''.
@@ -1130,6 +1132,9 @@ com.top_logic.element.meta.form.fieldprovider.StringFieldProvider = String field
 com.top_logic.element.meta.form.fieldprovider.StringFieldProvider.Config.trim = Trim
 com.top_logic.element.meta.form.fieldprovider.StringFieldProvider.Config.trim.tooltip = Whether to trim strings (automatically remove whitespace in front and at the end of values).
 com.top_logic.element.meta.form.fieldprovider.StringFieldProvider.tooltip = <i>Field provider</i> for <i>structured type parts</i> of type <i>string</i>.
+com.top_logic.element.meta.form.fieldprovider.TLDetailDialog = Detail dialog
+com.top_logic.element.meta.form.fieldprovider.TLDetailDialog.defaultI18n.tooltip = Title of the detail dialog. <p> If not specified, a default title is used. </p> <p> The text may contain the placeholder "{0}" that is replaced with the name of the type of the concrete object being edited. </p>
+com.top_logic.element.meta.form.fieldprovider.TLDetailDialog.tooltip = <i>Attribute annotation</i> specifying that a detail dialog should be available when editing the annotated composition in a form table. <p> If this annotation is given, a detail dialog can be opened from a table that displays composition reference contents within a form of the container. </p> <p> The form displayed in the detail dialog is the default form for the content type. </p>
 com.top_logic.element.meta.form.fieldprovider.TableSupportingComplexFieldProvider = Table supporting complex field provider
 com.top_logic.element.meta.form.fieldprovider.TableSupportingComplexFieldProvider.Config.select-table = Select table
 com.top_logic.element.meta.form.fieldprovider.TableSupportingComplexFieldProvider.Config.select-table.tooltip = Definition of the table for the created select field.
