--- a/com.top_logic.element/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_de.properties
@@ -26,6 +26,8 @@ class.com.top_logic.element.layout.meta.search.quick.I18NConstants.MORE_RESULTS 
 class.com.top_logic.element.layout.meta.search.quick.I18NConstants.NO_RESULTS = Keine Ergebnisse vorhanden, Suche verallgemeinern...
 class.com.top_logic.element.layout.meta.search.quick.I18NConstants.SEARCH_STRING_TOO_SHORT__MIN = Die Sucheingabe erfordert mindestens {0} Zeichen.
 class.com.top_logic.element.layout.structured.I18NConstants.ERROR_NOT_A_STRUCTURED_ELEMENT__ELEMENT = Das Objekt {0} ist kein strukturiertes Element.
+class.com.top_logic.element.meta.form.fieldprovider.I18NConstants.DETAIL_OPENER = Detail Öffner
+class.com.top_logic.element.meta.form.fieldprovider.I18NConstants.EDIT_DETAILS_TITLE__TYPE = Details von {0} bearbeiten
 class.com.top_logic.element.meta.form.fieldprovider.I18NConstants.MISSING_TYPE_COMPUTATION__ATTRIBUTE = Keine Annotation des Modelltyps bei Attribut "{0}" gefunden.
 class.com.top_logic.element.meta.kbbased.I18NConstants.ERROR_SETTING_VALUE__ATTRIBUTE_VALUE = Problem beim Setzen des Attributwertes ''{0}'' auf ''{1}''.
 class.com.top_logic.element.meta.kbbased.I18NConstants.NO_SUCH_GENERATOR__NAME = Es gibt keinen Generator mit dem Namen ''{0}''.
@@ -1130,6 +1132,9 @@ com.top_logic.element.meta.form.fieldprovider.StringFieldProvider = Erzeugung vo
 com.top_logic.element.meta.form.fieldprovider.StringFieldProvider.Config.trim = Trimmen
 com.top_logic.element.meta.form.fieldprovider.StringFieldProvider.Config.trim.tooltip = Ob Strings getrimmt werden sollen (automatische Entfernung von Leerzeichen vor und am Ende von Werten).
 com.top_logic.element.meta.form.fieldprovider.StringFieldProvider.tooltip = <i>Feldberechnung</i> für <i>strukturierte Typteile</i> vom Typ <i>String</i>.
+com.top_logic.element.meta.form.fieldprovider.TLDetailDialog = Detail-Dialog
+com.top_logic.element.meta.form.fieldprovider.TLDetailDialog.defaultI18n.tooltip = Titel des Detaildialogs. <p> Wenn nicht angegeben, wird ein Standardtitel verwendet. </p> <p> Der Text kann den Platzhalter "{0}" enthalten, der durch den Namen des Typs des zu bearbeitenden konkreten Objekts ersetzt wird. </p>
+com.top_logic.element.meta.form.fieldprovider.TLDetailDialog.tooltip = <i>Attribut-Annotation</i>, die angibt, dass bei der Bearbeitung der annotierten Komposition in einer Formulartabelle ein Detaildialog verfügbar sein soll. <p> Wenn diese Annotation angegeben ist, kann ein Detaildialog aus einer Tabelle geöffnet werden, die den Inhalt der Kompositionsreferenz innerhalb eines Formulars des Containers anzeigt. </p> <p> Das im Detaildialog angezeigte Formular ist das Standardformular für den Inhaltstyp. </p>
 com.top_logic.element.meta.form.fieldprovider.TableSupportingComplexFieldProvider = Tabelle zur Unterstützung komplexer Feldanbieter
 com.top_logic.element.meta.form.fieldprovider.TableSupportingComplexFieldProvider.Config.select-table = Tabelle auswählen
 com.top_logic.element.meta.form.fieldprovider.TableSupportingComplexFieldProvider.Config.select-table.tooltip = Definition der Tabelle für das erstellte Auswahlfeld.
