--- a/tl-service-jms-ibmmq/src/main/java/META-INF/messages_de.properties
+++ b/tl-service-jms-ibmmq/src/main/java/META-INF/messages_de.properties
@@ -9,6 +9,8 @@ com.top_logic.services.jms.ibmmq.IBMMQClient.Config.port = Port
 com.top_logic.services.jms.ibmmq.IBMMQClient.Config.port.tooltip = Der Port der Ziel-Warteschlange.
 com.top_logic.services.jms.ibmmq.IBMMQClient.Config.queue-manager = Warteschlangenmanager
 com.top_logic.services.jms.ibmmq.IBMMQClient.Config.queue-manager.tooltip = Der Warteschlangenmanager der Zielwarteschlange.
+com.top_logic.services.jms.ibmmq.IBMMQClient.Config.reconnect-timeout = Wiederverbindungs Timeout
+com.top_logic.services.jms.ibmmq.IBMMQClient.Config.reconnect-timeout.tooltip = Die Zeit in Sekunden, für die versucht werden soll, die verlorene Verbindung zur IBM MQ wieder herzustellen.
 com.top_logic.services.jms.ibmmq.IBMMQClient.Config.user = Benutzer
 com.top_logic.services.jms.ibmmq.IBMMQClient.Config.user.tooltip = Der Benutzername für die Anmeldung beim Nachrichtenwarteschlangen-Server.
 com.top_logic.services.jms.ibmmq.IBMMQClient.tooltip = Konfigurationsklasse für eine Verbindung zu einem IMB MQ-System.
