Ticket #28568: Adjusted documentation to fit to all elements to add a dynamic visibility to.

--- a/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
@@ -1023,7 +1023,7 @@ com.top_logic.model.search.providers.MigrationScript.Config.script.tooltip = The
 com.top_logic.model.search.providers.MigrationScript.tooltip = <i>Startup action</i> written in TL-Script.
 com.top_logic.model.search.providers.ModeSelectorByExpression = Mode selector by expression
 com.top_logic.model.search.providers.ModeSelectorByExpression.Config.function = Function
-com.top_logic.model.search.providers.ModeSelectorByExpression.Config.function.tooltip = Function computing the form field mode for an attribute. <p> The function expects the object defining the displayed attribute as single argument: </p> <code>object -> [one of <code>"default"</code>, <code>"hidden"</code> | all other visibilities (<code>"editable"</code>, <code>"disabled"</code>, <code>"read-only"</code>, <code>"mandatory"</code>) are interpreted as <code>"default"</code>.]</code>
+com.top_logic.model.search.providers.ModeSelectorByExpression.Config.function.tooltip = Function computing the form field mode for an attribute. <p> The function expects the object defining the displayed attribute as single argument: </p> <code>object -> [one of <code>"editable"</code>, <code>"disabled"</code>, <code>"read-only"</code>, <code>"mandatory"</code>, <code>"hidden"</code> | for fieldsets: one of <code>"default"</code>, <code>"hidden"</code> | all other visibilities are interpreted as <code>"default"</code>.]</code>
 com.top_logic.model.search.providers.ModeSelectorByExpression.tooltip = <i>Mode selector</i> that can be parameterized by TL-Script expressions.
 com.top_logic.model.search.providers.ModelProviderByExpression = Model provider by expression
 com.top_logic.model.search.providers.ModelProviderByExpression.Config.expr = Expression
