Ticket #28760: Added reconnect logic to send function of JMS.

--- a/tl-service-jms-ibmmq/src/main/java/META-INF/messages_de.properties
+++ b/tl-service-jms-ibmmq/src/main/java/META-INF/messages_de.properties
@@ -1,4 +1,6 @@
 com.top_logic.services.jms.ibmmq.IBMMQClient = IBM MQ-Client
+com.top_logic.services.jms.ibmmq.IBMMQClient.Config.auto-reconnect = Automatische Wiederverbindung
+com.top_logic.services.jms.ibmmq.IBMMQClient.Config.auto-reconnect.tooltip = Ob die Anwendung versuchen soll die Verbindung automatisch wiederherzustellen.
 com.top_logic.services.jms.ibmmq.IBMMQClient.Config.channel = Kanal
 com.top_logic.services.jms.ibmmq.IBMMQClient.Config.channel.tooltip = Der Kanal der Ziel-Warteschlange.
 com.top_logic.services.jms.ibmmq.IBMMQClient.Config.host = Host
