--- a/tl-service-jms-ibmmq/src/main/java/META-INF/messages_en.properties
+++ b/tl-service-jms-ibmmq/src/main/java/META-INF/messages_en.properties
@@ -1,4 +1,6 @@
 com.top_logic.services.jms.ibmmq.IBMMQClient = IBMMQ client
+com.top_logic.services.jms.ibmmq.IBMMQClient.Config.auto-reconnect = Automatic reconnect
+com.top_logic.services.jms.ibmmq.IBMMQClient.Config.auto-reconnect.tooltip = Whether the application should attempt to automatically reestablish the connection.
 com.top_logic.services.jms.ibmmq.IBMMQClient.Config.channel = Channel
 com.top_logic.services.jms.ibmmq.IBMMQClient.Config.channel.tooltip = The channel of the target queue.
 com.top_logic.services.jms.ibmmq.IBMMQClient.Config.host = Host
