--- a/tl-service-jms/src/main/java/META-INF/messages_de.properties
+++ b/tl-service-jms/src/main/java/META-INF/messages_de.properties
@@ -1,6 +1,12 @@
+class.com.top_logic.services.jms.I18NConstants.ERROR_CONNECTION_LOST = Verbindung zum MQ System verloren.
+class.com.top_logic.services.jms.I18NConstants.ERROR_CONNECTION_LOST_DETAILS = Bitte stellen Sie sicher, dass das MQ System läuft, bevor Sie versuchen, eine Nachricht zu senden oder den JMSService neu zu starten.
 class.com.top_logic.services.jms.I18NConstants.ERROR_ESTABLISH_CONNECTION__NAME = Fehler beim Verbindungsaufbau zu {0}.
+class.com.top_logic.services.jms.I18NConstants.ERROR_NO_CONNECTION = Problem bei der Verbindung zum MQ System. Versuche die Verbindung neu aufzubauen...
 class.com.top_logic.services.jms.I18NConstants.ERROR_RECEIVING_MSG__NAME = Fehler beim Empfangen einer Nachricht durch Consumer {0}.
+class.com.top_logic.services.jms.I18NConstants.ERROR_RECONNECT_FAILED = Wiederherstellen der Verbindung fehlgeschlagen.
 class.com.top_logic.services.jms.I18NConstants.ERROR_SENDING_MSG__NAME = Fehler beim Senden einer Nachricht durch Producer {0}.
+class.com.top_logic.services.jms.I18NConstants.INFO_RECONNECT_SUCCESS = Wiederherstellen der Verbindung erfolgreich. Versuche die Nachricht erneut zu senden...
+class.com.top_logic.services.jms.I18NConstants.INFO_RESEND_SUCCESS = Erneut senden erfolgreich.
 class.com.top_logic.services.jms.I18NConstants.PROCESSED_JMS_MESSAGE = JMS-Nachricht verarbeitet.
 class.com.top_logic.services.jms.script.I18NConstants.ERROR_JMS_SERVICE_NOT_STARTED__EXPR = JMS-Dienst nicht gestartet in {0}.
 class.com.top_logic.services.jms.script.I18NConstants.ERROR_NO_SUCH_CONNECTION__NAME_EXPR = Keine Verbindung mit Name {0}: {1}.
