--- a/tl-service-jms/src/main/java/META-INF/messages_en.properties
+++ b/tl-service-jms/src/main/java/META-INF/messages_en.properties
@@ -1,6 +1,12 @@
+class.com.top_logic.services.jms.I18NConstants.ERROR_CONNECTION_LOST = Connection to the MQ system lost.
+class.com.top_logic.services.jms.I18NConstants.ERROR_CONNECTION_LOST_DETAILS = Please make sure the MQ system is up and running before trying to send a message or restarting the JMSService.
 class.com.top_logic.services.jms.I18NConstants.ERROR_ESTABLISH_CONNECTION__NAME = Error establishing connection to {0}.
+class.com.top_logic.services.jms.I18NConstants.ERROR_NO_CONNECTION = Problem with the connection to the MQ system. Trying to reconnect...
 class.com.top_logic.services.jms.I18NConstants.ERROR_RECEIVING_MSG__NAME = Error receiving a message by consumer {0}.
+class.com.top_logic.services.jms.I18NConstants.ERROR_RECONNECT_FAILED = Reconnect failed.
 class.com.top_logic.services.jms.I18NConstants.ERROR_SENDING_MSG__NAME = Error sending a message by producer {0}.
+class.com.top_logic.services.jms.I18NConstants.INFO_RECONNECT_SUCCESS = Reconnect successful. Trying to resend message...
+class.com.top_logic.services.jms.I18NConstants.INFO_RESEND_SUCCESS = Resend successful.
 class.com.top_logic.services.jms.I18NConstants.PROCESSED_JMS_MESSAGE = Processed JMS message.
 class.com.top_logic.services.jms.script.I18NConstants.ERROR_JMS_SERVICE_NOT_STARTED__EXPR = JMS Service not started in {0}.
 class.com.top_logic.services.jms.script.I18NConstants.ERROR_NO_SUCH_CONNECTION__NAME_EXPR = No connection with name {0}: {1}.
