Ticket #28604: Resolved merge conflicts, updated diagram component.

--- a/com.top_logic.graphic.blocks.server/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.graphic.blocks.server/src/main/java/META-INF/messages_de.properties
@@ -1,4 +1,5 @@
 class.com.top_logic.graphic.flow.server.script.I18NConstants.ERROR_WRONG_ARGUMENT__FUN_ARG_EXPECTED_VAL = Falsches Argument für Parameter{1}" der Funktion{0}", erwartet wird ein Wert vom Typ{2}" Wert war: {3}
+class.com.top_logic.graphic.flow.server.ui.handler.I18NConstants.DIAGRAM_DROP_ACTION__TARGET = Auf Diagrammknoten "{0}" fallen lassen.
 com.top_logic.graphic.blocks.server.component.BlocksComponent = Blocks Komponente
 com.top_logic.graphic.blocks.server.component.BlocksComponent.tooltip = <i>Komponente</i>, die ein <i>Blockmodell</i> anzeigt.
 com.top_logic.graphic.flow.server.script.JavaScriptMethod$Builder = Erbauer
