--- a/com.top_logic.graphic.blocks.server/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.graphic.blocks.server/src/main/java/META-INF/messages_en.properties
@@ -1,4 +1,5 @@
 class.com.top_logic.graphic.flow.server.script.I18NConstants.ERROR_WRONG_ARGUMENT__FUN_ARG_EXPECTED_VAL = Wrong argument to parameter "{1}" of function "{0}", expected is a value of type "{2}" value was: {3}
+class.com.top_logic.graphic.flow.server.ui.handler.I18NConstants.DIAGRAM_DROP_ACTION__TARGET = Drop on diagram node "{0}".
 com.top_logic.graphic.blocks.server.component.BlocksComponent = Blocks component
 com.top_logic.graphic.blocks.server.component.BlocksComponent.tooltip = <i>Component</i> displaying a <i>block model</i>.
 com.top_logic.graphic.flow.server.script.JavaScriptMethod$Builder = Builder
