Ticket #28604: Enhanced commit messages.

--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -107,13 +107,13 @@ class.com.top_logic.layout.editor.commands.I18NConstants.RESET_LAYOUT_CONFIG__US
 class.com.top_logic.layout.form.boxes.reactive_tag.I18NConstants.GROUP_NOT_COLLAPSIBLE = Die Gruppe kann nicht zugeklappt werden.
 class.com.top_logic.layout.form.boxes.reactive_tag.I18NConstants.TOGGLE = Auf- oder zuklappen
 class.com.top_logic.layout.form.component.I18NConstants.CREATED_OBJECT = Erstelltes Objekt.
-class.com.top_logic.layout.form.component.I18NConstants.CREATED__MODEL = Erstelltes Objekt: {0}
-class.com.top_logic.layout.form.component.I18NConstants.DELETED__MODEL = Gelöschtes Objekt: {0}
+class.com.top_logic.layout.form.component.I18NConstants.CREATED__MODEL = Objekt "{0}" erstellt.
+class.com.top_logic.layout.form.component.I18NConstants.DELETED__MODEL = Objekt "{0}" gelöscht.
 class.com.top_logic.layout.form.component.I18NConstants.INVALIDATE = Aktualisieren
 class.com.top_logic.layout.form.component.I18NConstants.INVALIDATE.tooltip = Setzt die Ansicht zurück und lädt sie neu aus den zugrunde liegenden Daten.
-class.com.top_logic.layout.form.component.I18NConstants.PERFORMED__OPERATION = Durchgeführte Operation{0}".
-class.com.top_logic.layout.form.component.I18NConstants.PERFORMED__OPERATION_MODEL = Durchgeführte Operation{0}" auf{1}.
-class.com.top_logic.layout.form.component.I18NConstants.UPDATED__MODEL = Aktualisiertes Objekt: {0}
+class.com.top_logic.layout.form.component.I18NConstants.PERFORMED__OPERATION = Operation "{0}" durchgeführt.
+class.com.top_logic.layout.form.component.I18NConstants.PERFORMED__OPERATION_MODEL = Operation "{0}" auf "{1}" ausgeführt.
+class.com.top_logic.layout.form.component.I18NConstants.UPDATED__MODEL = Objekt "{0}" aktualisiert.
 class.com.top_logic.layout.form.control.I18NConstants.CHECKLIST_ALL = Alle auswählen
 class.com.top_logic.layout.form.control.I18NConstants.CHECKLIST_DISPLAY__CNT_TOTAL = {0} / {1}
 class.com.top_logic.layout.form.control.I18NConstants.CHECKLIST_NONE = Auswahl löschen
