--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -107,13 +107,13 @@ class.com.top_logic.layout.editor.commands.I18NConstants.RESET_LAYOUT_CONFIG__US
 class.com.top_logic.layout.form.boxes.reactive_tag.I18NConstants.GROUP_NOT_COLLAPSIBLE = The group can not be collapsed.
 class.com.top_logic.layout.form.boxes.reactive_tag.I18NConstants.TOGGLE = Expand or collapse.
 class.com.top_logic.layout.form.component.I18NConstants.CREATED_OBJECT = Created object.
-class.com.top_logic.layout.form.component.I18NConstants.CREATED__MODEL = Created object: {0}
+class.com.top_logic.layout.form.component.I18NConstants.CREATED__MODEL = Object "{0}" created.
 class.com.top_logic.layout.form.component.I18NConstants.DELETED__MODEL = Deleted object: {0}
 class.com.top_logic.layout.form.component.I18NConstants.INVALIDATE = Reload
 class.com.top_logic.layout.form.component.I18NConstants.INVALIDATE.tooltip = Resets the view and reloads it from underlying data.
-class.com.top_logic.layout.form.component.I18NConstants.PERFORMED__OPERATION = Performed operation "{0}".
-class.com.top_logic.layout.form.component.I18NConstants.PERFORMED__OPERATION_MODEL = Performed operation "{0}" on "{1}".
-class.com.top_logic.layout.form.component.I18NConstants.UPDATED__MODEL = Updated object: {0}
+class.com.top_logic.layout.form.component.I18NConstants.PERFORMED__OPERATION = Operation "{0}" performed.
+class.com.top_logic.layout.form.component.I18NConstants.PERFORMED__OPERATION_MODEL = Operation "{0}" performed on "{1}".
+class.com.top_logic.layout.form.component.I18NConstants.UPDATED__MODEL = Updated object "{0}".
 class.com.top_logic.layout.form.control.I18NConstants.CHECKLIST_ALL = Select all
 class.com.top_logic.layout.form.control.I18NConstants.CHECKLIST_DISPLAY__CNT_TOTAL = {0} / {1}
 class.com.top_logic.layout.form.control.I18NConstants.CHECKLIST_NONE = Clear selection
